# Storage-redirection-X-Public

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  gradle.properties  keystore.properties.example  rust-toolchain.toml  rustfmt.toml  settings.gradle.kts  update.json
.cargo/: config.example.toml
.github/: CHANGELOG.md  build-version-baseline.json  pull_request_template.md
.github/scripts/: build_test_flow_runtime.sh  generate_changelog.py  (+5 more)
android/: gradle.properties
app/: build.gradle.kts  proguard-rules.pro
docs/: ai-agent-code-review.md  ai-review-report.example.json  build-environment.md  build-process.md  device-testing.md  module-packaging.md  runtime-configuration.md  troubleshooting.md  upstream-hook-dependencies.md
gradle/: libs.versions.toml
native/: CMakeLists.txt  srx_lsplant_bridge.cpp
scripts/: build-local-app.ps1  build-local-module.ps1  build.py  check-kotlin-naming.js  record-ai-review.ps1  test-validate-code-quality.ps1  validate-ai-review.ps1  validate-code-quality.ps1  validate-commit.ps1  validate-inline-tests.ps1  verify-test-flow.ps1  verify-test-flow.sh  verify-webui-config-fixtures.js  verify-webui-structure.js
src/: config.rs  daemon.rs  daemon_monitor.rs  daemon_mount.rs  domain.rs  fuse_redirect.rs  hook.rs  java_hook.rs  lib.rs  lifecycle.rs  log_daemon.rs  logging.rs  monitor.rs  mount.rs  mount_status_marker.rs  platform.rs  redirect.rs  runtime_control.rs  runtime_stats.rs  zygisk.rs
srx_core/: Cargo.toml  build.rs
srx_core/java_src/org/srx/hook/: FilteringCursor.java  Hooker.java
srx_core/native/: srx_lsplant_bridge.cpp
srx_core/src/: config.rs  hook.rs  logging.rs
srx_core/src/config/: inspect.rs  raw_scan.rs  source.rs  watcher.rs
srx_core/src/hook/: entries.rs  media_fuse.rs  reload.rs
srx_core/src/hook/fuse_fixer/: image.rs  install.rs
srx_core/src/hook/jni_query/: rewrite.rs  types.rs
srx_core/src/hook/ops/: mutation.rs  open.rs  query.rs
srx_core/src/lifecycle/: specialize_pre.rs
srx_core/src/lifecycle/companion_mount/: stats.rs
srx_core/src/mount/: core.rs
srx_core/src/platform/: module_paths.rs  paths.rs
srx_core/src/redirect/: engine.rs  policy.rs  router.rs  writer.rs
(+263 files in other folders)
