[package]
name = "srx_core"
version = "1.2.57"
edition = "2024"

[lib]
name = "srx_core"
crate-type = ["cdylib"]

[[bin]]
name = "srx_daemon"
path = "src/bin/srx_daemon.rs"

[dependencies]
libc = "0.2"
jni-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
srx_hook = { git = "https://github.com/Kindness-Kismet/srx_hook.git", branch = "main" }
srx_inline_hook = { git = "https://github.com/Kindness-Kismet/srx_inline_hook.git", branch = "main" }
log = "0.4"
fuser = { version = "0.17", default-features = false }

[patch.crates-io]
fuser = { path = "vendor/fuser-android" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
