[package]
name = "srx_core"
version = "1.2.53"
edition = "2024"

[lib]
name = "srx_core"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
jni-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
srx_hook = { git = "https://github.com/Kindness-Kismet/srx_hook.git", branch = "main" }
srx_inline_hook = { git = "https://github.com/Kindness-Kismet/srx_inline_hook.git", branch = "main" }
log = "0.4"
